err/chuk.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chuk'...
Listing './lib/python3.5/site-packages/chuk/Application'...
Compiling './lib/python3.5/site-packages/chuk/Application/ConfigDir.py'...
***   File "./lib/python3.5/site-packages/chuk/Application/ConfigDir.py", line 44
    os.mkdir(dir_root, 0700)
                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/chuk/Application/parsedir.py'...
***   File "./lib/python3.5/site-packages/chuk/Application/parsedir.py", line 11
    print ":: " + msg
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chuk/Application/reannounce.py'...
***   File "./lib/python3.5/site-packages/chuk/Application/reannounce.py", line 11
    print 'old announce for %s: %s' % (fname, metainfo['announce'])
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chuk/Client'...
Compiling './lib/python3.5/site-packages/chuk/Client/CurrentRateMeasure.py'...
***   File "./lib/python3.5/site-packages/chuk/Client/CurrentRateMeasure.py", line 10
    self.total = 0l
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chuk/Client/Downloader.py'...
***   File "./lib/python3.5/site-packages/chuk/Client/Downloader.py", line 373
    self.discarded = 0L
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chuk/Client/HTTPDownloader.py'...
***   File "./lib/python3.5/site-packages/chuk/Client/HTTPDownloader.py", line 173
    self.request_size = 0L
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chuk/Client/RateLimiter.py'...
***   File "./lib/python3.5/site-packages/chuk/Client/RateLimiter.py", line 96
    print delay
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chuk/Client/Rerequester.py'...
***   File "./lib/python3.5/site-packages/chuk/Client/Rerequester.py", line 425
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chuk/Client/Statistics.py'...
***   File "./lib/python3.5/site-packages/chuk/Client/Statistics.py", line 39
    start = 0L
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chuk/Client/download_bt1.py'...
***   File "./lib/python3.5/site-packages/chuk/Client/download_bt1.py", line 173
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chuk/Download'...
Compiling './lib/python3.5/site-packages/chuk/Download/depend.py'...
***   File "./lib/python3.5/site-packages/chuk/Download/depend.py", line 97
    print '\n\n\n\n'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chuk/Meta'...
Compiling './lib/python3.5/site-packages/chuk/Meta/BTTree.py'...
***   File "./lib/python3.5/site-packages/chuk/Meta/BTTree.py", line 49
    print problem
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chuk/Meta/Info.py'...
***   File "./lib/python3.5/site-packages/chuk/Meta/Info.py", line 101
    self.done = 0L
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chuk/Meta/bencode.py'...
***   File "./lib/python3.5/site-packages/chuk/Meta/bencode.py", line 209
    assert bencode(12345678901234567890L) == 'i12345678901234567890e'
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chuk/Network'...
Compiling './lib/python3.5/site-packages/chuk/Network/NetworkAddress.py'...
***   File "./lib/python3.5/site-packages/chuk/Network/NetworkAddress.py", line 267
    print '*** WARNING *** could not parse IP range: ' + line
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chuk/Network/SocketHandler.py'...
***   File "./lib/python3.5/site-packages/chuk/Network/SocketHandler.py", line 276
    print "lost server socket"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chuk/Network/natpunch.py'...
***   File "./lib/python3.5/site-packages/chuk/Network/natpunch.py", line 51
    print 'port opened: {}:{}'.format(ip, p)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chuk/Storage'...
Compiling './lib/python3.5/site-packages/chuk/Storage/FileSelector.py'...
***   File "./lib/python3.5/site-packages/chuk/Storage/FileSelector.py", line 22
    total = 0L
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chuk/Storage/Storage.py'...
***   File "./lib/python3.5/site-packages/chuk/Storage/Storage.py", line 13
    MAXLOCKSIZE = 1000000000L
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chuk/Storage/StorageWrapper.py'...
***   File "./lib/python3.5/site-packages/chuk/Storage/StorageWrapper.py", line 95
    self.write_buf_max = config['write_buffer_size'] * 1048576L
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chuk/Tracker'...
Compiling './lib/python3.5/site-packages/chuk/Tracker/HTTPHandler.py'...
***   File "./lib/python3.5/site-packages/chuk/Tracker/HTTPHandler.py", line 77
    print data[:i].strip() + ": " + data[i + 1:].strip()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chuk/Tracker/T2T.py'...
***   File "./lib/python3.5/site-packages/chuk/Tracker/T2T.py", line 10
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chuk/Tracker/torrentlistparse.py'...
***   File "./lib/python3.5/site-packages/chuk/Tracker/torrentlistparse.py", line 14
    print base_error + 'incorrect length: ' + l
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chuk/Tracker/track.py'...
***   File "./lib/python3.5/site-packages/chuk/Tracker/track.py", line 263
    print "**warning** specified favicon file -- %s -- does not " \
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chuk-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/win_inet_pton-1.0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
